[tool.poetry]
name = "kiri-pathfinding"
version = "0.1.0"
description = "A toy module to generate a map and find the shortest path from two points on the map"
authors = ["anthony <mrchowpoor@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
numba = "^0.56.3"
numpy = "^1.23.4"
matplotlib = "^3.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
